2010-03-04  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* src/dlvhex/Interpretation.cpp: print edb, one fact each line 

	* include/dlvhex/MLPSolver.hpp: fixing bug on finding the answer sets (because A is not reverted)

2010-03-04  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* examples/module1-MainModules.hex: Handling more than one main module.
	* include/dlvhex/MLPSolver.hpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing rewrite and completing the recursion.

2010-03-03  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Completing rewrite.
	* include/dlvhex/Interpretation.hpp: Likewise.
	* include/dlvhex/ModuleAtomTable.hpp: Likewise.
	* src/dlvhex/Interpretation.cpp: Likewise.

	* include/dlvhex/ID.hpp: Adding kind to take out property rule modatoms.

	* include/dlvhex/MLPSolver.hpp: Finishing comp.
	* include/dlvhex/OrdinaryAtomTable.hpp: Likewise.
	* include/dlvhex/Interpretation.hpp: Likewise.


2010-03-02  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Interpretation.hpp: adding setRegistry to Interpretation

2010-03-01  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleTable.hpp: Implement some helper function for part c.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* include/dlvhex/Interpretation.hpp: Likewise.

2010-02-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.hpp: Fixing bug in the renaming output predicate module atom.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* testsuite/TestHexParserModule.cpp: Likewise.

	* include/dlvhex/ModuleSyntaxChecker.hpp: Implementing restriction and renaming.
	* include/dlvhex/Atoms.hpp: Likewise.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* include/dlvhex/ModuleAtomTable.hpp: Likewise.
	* include/dlvhex/Module.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.
