@@ -1,0 +1,11 @@
+#module(p1,[]).
+q(a).
+r(a).
+s :- @p2[q]::r(a).
+
+
+#module(p2,[q/1]).
+q(a).
+r(a).
+s :- @p2[q]::r(a).
+
